# bevy-workspace

./: .envrc  .gitignore  Cargo.toml  README.md  flake.build-multitarget.nix  flake.nix  rename.sh  result
.cargo/: config.toml
.github/workflows/: build_nix.yml
template_game/: Cargo.toml
template_game/src/: main.rs
template_lib/: Cargo.toml
template_lib/src/: lib.rs
template_lib/src/graphics/: mod.rs
template_lib/src/player/: camera.rs  mod.rs
template_lib/src/simulation/: mod.rs
template_lib/tests/: integration_test.rs
