[workspace]

resolver = "2"

members = [ ]


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Optional: Uncommenting the following improves compile times, but reduces the amount of debug info to 'line number tables only'
# In most cases the gains are negligible, but if you are on macos and have slow compile times you should see significant gains.
#[profile.dev]
#debug = 1
