[workspace]

resolver = "2"

members = ["template_game", "template_lib"]

default-members = ["template_game", "template_lib"]

# [profile.dev]
# opt-level = 1

# [profile.dev.package."*"]
# opt-level = 3

# # Optional: Uncommenting the following improves compile times, but reduces the amount of debug info to 'line number tables only'
# # In most cases the gains are negligible, but if you are on macos and have slow compile times you should see significant gains.
# #[profile.dev]
# #debug = 1

# [profile.release]
# # Compile the entire crate as one unit.
# # Slows compile times, marginal improvements.
# codegen-units = 1
# # Do a second optimization pass over the entire program, including dependencies.
# # Slows compile times, marginal improvements.
# lto = "thin"

# # Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
# [profile.wasm-release]
# # Default to release profile values.
# inherits = "release"
# # Optimize with size in mind (also try "z", sometimes it is better).
# # Slightly slows compile times, great improvements to file size and runtime performance.
# opt-level = "s"
# # Strip all debugging information from the binary to slightly reduce file size.
# strip = "debuginfo"
