[package]
name = "template_game"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
  "dynamic_linking",
] }
log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
template_lib = { path = "../template_lib", version = "0.1" }
