[package]
name = "template_game"
authors.workspace = true
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
template_lib = { path = "../template_lib" }
log = { workspace = true }
bevy = { workspace = true, features = [
  # https://docs.rs/bevy/latest/bevy/#cargo-features
] }
