[package]
name = "template_lib"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
bevy = { version = "0.14", default-features = false, features = [
  # ~~ DEFAULT ~~
  # "android_shared_stdcxx",
  # "animation",
  # "bevy_animation",
  "bevy_asset",
  # "bevy_audio",
  # "bevy_color",
  "bevy_core_pipeline",
  "bevy_gilrs",
  # "bevy_gizmos",
  # "bevy_gltf",
  "bevy_pbr",
  "bevy_render",
  "bevy_scene",
  # "bevy_sprite",
  # "bevy_state",
  # "bevy_text",
  # "bevy_ui",
  "bevy_winit",
  # "default_font",
  # "hdr",
  # "ktx2",
  # "multi_threaded",
  "png",
  # "smaa_luts",
  # "sysinfo_plugin",
  "tonemapping_luts",
  # "vorbis",
  # "webgl2",
  # "x11",
  # "zstd",

  # ~~ OPTIONAL ~~
  # "accesskit_unix",
  # "asset_processor",
  # "async-io",
  # "basis-universal",
  # "bevy_ci_testing",
  # "bevy_debug_stepping",
  # "bevy_dev_tools",
  # "bevy_dynamic_plugin",
  # "bmp",
  # "dds",
  # "debug_glam_assert",
  # "detailed_trace",
  "dynamic_linking",
  # "embedded_watcher",
  # "exr",
  # "file_watcher",
  # "flac",
  # "glam_assert",
  # "ios_simulator",
  # "jpeg",
  # "meshlet",
  # "meshlet_processor",
  # "minimp3",
  # "mp3",
  # "pbr_anisotropy_texture",
  # "pbr_multi_layer_material_textures",
  # "pbr_transmission_textures",
  # "pnm",
  # "serialize",
  # "shader_format_glsl",
  # "shader_format_spirv",
  # "subpixel_glyph_atlas",
  # "symphonia-aac",
  # "symphonia-all",
  # "symphonia-flac",
  # "symphonia-isomp4",
  # "symphonia-vorbis",
  # "symphonia-wav",
  # "tga",
  # "trace",
  # "trace_chrome",
  # "trace_tracy",
  # "trace_tracy_memory",
  # "wav",
  "wayland",
  # "webgpu",
  # "webp",
  # "wgpu_trace",
  # "zlib",
] }
