[package]
name = "template_lib"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
log = { workspace = true }
bevy = { workspace = true, features = [
  # https://docs.rs/bevy/latest/bevy/#cargo-features
  # Default Features 
  "android-game-activity",
  "android_shared_stdcxx",
  "animation",
  "async_executor",
  "bevy_animation",
  "bevy_asset",
  "bevy_audio",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gilrs",
  "bevy_gizmos",
  "bevy_gltf",
  "bevy_input_focus",
  "bevy_log",
  "bevy_mesh_picking_backend",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_sprite_picking_backend",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "bevy_window",
  "bevy_winit",
  "custom_cursor",
  "default_font",
  "hdr",
  "ktx2",
  "multi_threaded",
  "png",
  "smaa_luts",
  "std",
  "sysinfo_plugin",
  "tonemapping_luts",
  "vorbis",
  "webgl2",
  "x11",
  "zstd",

  # Optional Features
  # "accesskit_unix",
  # "android-native-activity",
  # "asset_processor",
  # "async-io",
  # "basis-universal",
  # "bevy_ci_testing",
  # "bevy_debug_stepping",
  # "bevy_dev_tools",
  # "bevy_image",
  # "bevy_remote",
  # "bevy_ui_debug",
  # "bmp",
  # "configurable_error_handler",
  # "critical-section",
  # "dds",
  # "debug_glam_assert",
  # "default_no_std",
  # "detailed_trace",
  # "dynamic_linking",
  # "embedded_watcher",
  # "experimental_pbr_pcss",
  # "exr",
  # "ff",
  # "file_watcher",
  # "flac",
  # "ghost_nodes",
  # "gif",
  # "glam_assert",
  # "ico",
  # "jpeg",
  # "libm",
  # "meshlet",
  # "meshlet_processor",
  # "minimp3",
  # "mp3",
  # "pbr_anisotropy_texture",
  # "pbr_multi_layer_material_textures",
  # "pbr_specular_textures",
  # "pbr_transmission_textures",
  # "pnm",
  # "qoi",
  # "reflect_documentation",
  # "reflect_functions",
  # "serialize",
  # "shader_format_glsl",
  # "shader_format_spirv",
  # "shader_format_wesl",
  # "spirv_shader_passthrough",
  # "statically-linked-dxc",
  # "symphonia-aac",
  # "symphonia-all",
  # "symphonia-flac",
  # "symphonia-isomp4",
  # "symphonia-vorbis",
  # "symphonia-wav",
  # "tga",
  # "tiff",
  # "trace",
  # "trace_chrome",
  # "trace_tracy",
  # "trace_tracy_memory",
  # "track_location",
  # "wav",
  # "wayland",
  # "web",
  # "webgpu",
  # "webp",
  # "zlib",
] }
